--- a/android/pytorch_android/CMakeLists.txt
+++ b/android/pytorch_android/CMakeLists.txt
@@ -54,6 +54,7 @@ if (ANDROID_ABI)
   import_static_lib(libtorch)
   import_static_lib(libc10)
   import_static_lib(libnnpack)
+  import_static_lib(libnnpack_reference_layers)
   import_static_lib(libpytorch_qnnpack)
   import_static_lib(libeigen_blas)
   import_static_lib(libcpuinfo)
@@ -68,6 +69,7 @@ if (ANDROID_ABI)
       -Wl,--no-whole-archive
       libc10
       libnnpack
+      libnnpack_reference_layers
       libpytorch_qnnpack
       libeigen_blas
       libcpuinfo
